# AirPlay-Windows

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
build_gst/: CMakeCache.txt  Makefile  airplay-windows  cmake_install.cmake
docs/: FAIRPLAY.md  PROTOCOL.md
src/: log.cpp  log.h  main.cpp
src/airplay/: airplay2_setup.cpp  airplay2_setup.h  client_session.h  daap.cpp  daap.h  fcup.cpp  fcup.h  h264_nal.cpp  h264_nal.h  h264_sps.cpp  h264_sps.h  hls_local_server.cpp  hls_local_server.h  hls_session.cpp  hls_session.h  info_plist.cpp  info_plist.h  live_settings.h  mirror_listener.cpp  mirror_listener.h  ntp_client.cpp  ntp_client.h  reverse_channel.cpp  reverse_channel.h  routes.cpp  routes.h  rtsp_parser.cpp  rtsp_parser.h  sdp.cpp  sdp.h  server.cpp  server.h  streams.cpp  streams.h
src/audio/: aac_decoder.cpp  aac_decoder.h  audio_output.cpp  audio_output.h  audio_receiver.cpp  audio_receiver.h
src/crypto/: fairplay.cpp  fairplay.h  fairplay_blobs.h  identity.cpp  identity.h  mirror_decrypt.cpp  mirror_decrypt.h  pair_verify.cpp  pair_verify.h
src/mdns/: bonjour_service.cpp  bonjour_service.h  mdns_service.cpp  mdns_service.h
src/net/: socket.cpp  socket.h  tcp_server.cpp  tcp_server.h
src/usb/: pair_record.cpp  pair_record.h  usb_supervisor.cpp  usb_supervisor.h
src/video/: h264_decoder.cpp  h264_decoder.h  hls_player.cpp  hls_player.h  hls_player_gstreamer.cpp  video_renderer.cpp  video_renderer.h
tools/: test_pair_verify.py
